# pivy

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CMakeLists.txt  HACKING  LICENSE  MANIFEST.in  Makefile  NEWS  README  README.md  SConstruct  THANKS  TargetCopyFiles.cmake  build_pivy.py  install_helpers.py  pivy.i  pivy_common_typemaps.i  pivy_runtime.i  pivy_swigpy.c  pixi.toml  setup.py  setup_old.py  sogtk.i  sogui.py  soqt.i  sowin.i  soxt.i
.github/workflows/: build-with-vcpkg.yml  test-env-action.yml
Inventor/: SbBox2d.i  SbBox2f.i  SbBox2s.i  SbBox3f.i  SbBox3s.i  SbColor.h  SbColor.i  SbColor4f.h  SbColor4f.i  SbDPMatrix.h  SbDPMatrix.i  SbDPPlane.i  SbDPRotation.i  SbDict.h  SbDict.i  SbImage.i  SbMatrix.h  SbMatrix.i  SbName.h  SbName.i  SbOctTree.h  SbPlane.i  SbRotation.h  SbRotation.i  SbString.h  SbString.i  SbTesselator.h  SbTime.h  SbTime.i  SbVec2d.i  SbVec2f.h  SbVec2f.i  SbVec2s.h  SbVec2s.i  SbVec3d.h  SbVec3d.i  SbVec3f.h  SbVec3f.i  SbVec3s.i  SbVec4d.i  (+18 more)
Inventor/Gtk/: SoGtk.h  SoGtkCursor.h  SoGtkGraphEditor.h  SoGtkRenderArea.h  SoGtkRoster.h
Inventor/Qt/: SoQt.h  SoQt.i  SoQtCursor.h  SoQtCursor.i  SoQtRenderArea.h  SoQtRenderArea.i
Inventor/Win/: SoWin.i  SoWinCursor.i
Inventor/Xt/: SoXt.h  SoXtCursor.h  SoXtRenderArea.h
Inventor/actions/: SoAction.h  SoAction.i  SoCallbackAction.h  SoCallbackAction.i  SoGLRenderAction.i  SoWriteAction.h  SoWriteAction.i
Inventor/collision/: SoIntersectionDetectionAction.h  SoIntersectionDetectionAction.i
Inventor/draggers/: SoDragger.h  SoDragger.i
Inventor/elements/: SoGLLazyElement.h
Inventor/engines/: SoEngine.i  SoInterpolate.h  SoSubEngine.h.fix
Inventor/events/: SoEvent.h  SoEvent.i
Inventor/fields/: SoField.h  SoField.i  SoFieldContainer.h  SoFieldContainer.i  SoMFBool.i  SoMFColor.h  SoMFColor.i  SoMFEngine.i  SoMFEnum.i  SoMFFloat.h  SoMFFloat.i  SoMFInt32.h  SoMFInt32.i  SoMFMatrix.i  SoMFName.i  SoMFNode.i  SoMFPath.i  SoMFPlane.i  SoMFRotation.i  SoMFShort.i  SoMFString.h  SoMFString.i  SoMFTime.i  SoMFUInt32.i  SoMFUShort.i  SoMFVec2f.h  SoMFVec2f.i  SoMFVec3d.i  SoMFVec3f.h  SoMFVec3f.i  SoMFVec4f.h  SoMFVec4f.i  SoMField.i  SoSFBool.h  SoSFBool.i  SoSFColor.h  SoSFColor.i  SoSFEngine.i  SoSFEnum.h  SoSFEnum.i  (+30 more)
Inventor/lists/: SbIntList.h  SbPList.h  SbPList.i  SbStringList.h  SbVec3fList.h  SoAuditorList.h  SoBaseList.i  SoDetailList.h  SoEngineOutputList.h  SoFieldList.h  SoFieldList.i  SoNodeList.i  SoPathList.i  SoPickedPointList.h  SoTypeList.h  SoVRMLInterpOutputList.h
Inventor/misc/: SoBase.i  SoNotification.h
Inventor/nodekits/: SoBaseKit.i
Inventor/nodes/: SoCallback.h  SoCallback.i  SoCamera.h  SoCamera.i  SoEventCallback.h  SoEventCallback.i  SoGroup.h  SoGroup.i  SoMarkerSet.i  SoNode.h  SoNode.i  SoSelection.h  SoSelection.i  SoSubNode.h.fix
Inventor/scxml/: ScXMLStateMachine.i
Inventor/sensors/: SoAlarmSensor.h  SoAlarmSensor.i  SoDataSensor.h  SoDataSensor.i  SoDelayQueueSensor.h  SoDelayQueueSensor.i  SoFieldSensor.h  SoFieldSensor.i  SoIdleSensor.h  SoIdleSensor.i  SoNodeSensor.h  SoNodeSensor.i  SoOneShotSensor.h  SoOneShotSensor.i  SoPathSensor.h  SoPathSensor.i  SoSensor.h  SoSensor.i  SoSensorManager.i  SoTimerQueueSensor.h  SoTimerQueueSensor.i  SoTimerSensor.h  SoTimerSensor.i
Inventor/system/: inttypes.h.win32
SoPyScript/: Makefile  SConstruct  SoPyScript.cpp  SoPyScript.h  SoPyScript.i  examin.cpp  example.iv  glow.iv  swigpyrun.h
VolumeViz/nodes/: SoVolumeRender.i
distutils_cmake/: CMakeLists.txt
docs/: license.template
examples/: examiner_embed.py  examiner_embed4.py
examples/Mentor/: 02.1.HelloCone.py  02.2.EngineSpin.py  02.3.Trackball.py  02.4.Examiner.py  03.1.Molecule.py  03.2.Robot.py  03.3.Naming.py  04.1.Cameras.py  04.2.Lights.py  05.1.FaceSet.py  05.2.IndexedFaceSet.py  05.3.TriangleStripSet.py  05.4.QuadMesh.py  05.5.Binding.py  05.6.TransformOrdering.py  06.1.Text.py  06.2.Simple3DText.py  06.3.Complex3DText.py  06.3.Complex3DText_not_working.py  07.1.BasicTexture.py  07.2.TextureCoordinates.py  07.3.TextureFunction.py  08.1.BSCurve.py  08.2.UniCurve.py  08.3.BezSurf.py  08.4.TrimSurf.py  09.1.Print.py  09.2.Texture.py  09.3.Search.py  09.4.PickAction.py  09.5.GenSph.py  10.1.addEventCB.py  10.2.setEventCB.py  10.3and4.MotifList.py  10.5.SelectionCB.py  10.6.PickFilterTopLevel.py  10.7.PickFilterManip.py  10.8.PickFilterNodeKit.py  11.1.ReadFile.py  11.2.ReadString.py  (+28 more)
examples/Mentor_quarter/: 02.1.HelloCone.py  02.2.EngineSpin.py  02.3.Trackball.py  02.4.Examiner.py  03.1.Molecule.py  03.2.Robot.py  03.3.Naming.py  04.1.Cameras.py  04.2.Lights.py  05.1.FaceSet.py  05.2.IndexedFaceSet.py  05.3.TriangleStripSet.py  05.4.QuadMesh.py  05.5.Binding.py  05.6.TransformOrdering.py  06.1.Text.py  06.2.Simple3DText.py  06.3.Complex3DText.py  07.1.BasicTexture.py  07.2.TextureCoordinates.py  09.4.PickAction.py  09.5.GenSph.py  10.1.addEventCB.py  10.2.setEventCB.py  14.3.Balance.py  16.1.Overlay.py  16.3.AttachEditor.py
examples/QtDesigner/: test.ui
examples/Quarter/: mdi.py  minimal.py
examples/SIMVoleon/: examine.py  utility.py
examples/SoPyScript/: SConstruct  example.iv  example_remote.iv  glow.py  textscroll.py
examples/contrib/: iv2pov.py  mirrorball.py
examples/extend/: Makefile  README  SConstruct  ShapeScale.cpp  ShapeScale.h  scale_test.py  shapescale.i
examples/soqt/: examinar_viewer.py  minimal.py  renderAreaCallback.py
examples/utils/: GlClipPlane.py  event_callback.py  interaction.py  maker.py  marker.py  marker_from_svg.py
interfaces/: CMakeLists.txt  coin.i  coin_header_includes.h  pivy.i  pivy_common_typemaps.i  simvoleon.i  sogtk.i  soqt.i  soqt2.i  sowin.i  soxt.i
packaging/conda/: bld.bat  build.sh  meta.yaml
packaging/debian/: build_with_debian.md
packaging/gentoo/: pivy-svn-0.4.0.ebuild
pivy/: __init__.py  pivy_meta.py  sogui.py  utils.py  visual_test.py
pivy/graphics/: colors.py  (+4 more)
scons/: scons-time.py  scons.py  sconsign.py
tests/: coin_tests.py  generate_visual_references.py  pivy_tests.py  pyside_test.py  quarter_tests.py  run_visual_tests.py  visual_test.py  visual_tests.py
(+201 files in other folders)
